Fix Class#newInstance deprecation warnings
 - c.getDeclaredConstructor().newInstance() can be used instead.
 - simplified exception handling in related code