@@ -506,7 +506,7 @@ public final class DeployOnSaveManager {
                 ClassLoader reloadedClassLoader = customDefClassLoaders.get(reloadedPackageName);
                 if (reloadedClassLoader != null) {
                     Class reloadedClass = reloadedClassLoader.loadClass(reloadedClassName);
-                    reloadedClass.getMethod("execute").invoke(reloadedClass.newInstance());
+                    reloadedClass.getMethod("execute").invoke(reloadedClass.getDeclaredConstructor().newInstance());
                 }
             } catch (Exception ex) {
                 Exceptions.printStackTrace(ex);
