@@ -307,7 +307,7 @@ public final class AntBridge {
                 }
             } // in classpath mode, these checks do not apply
             Map<String,ClassLoader> cDCLs = createCustomDefClassLoaders(main);
-            return new AntInstance(classPathToString(mainClassPath), main, bridgeLoader, impl.newInstance(), createCustomDefs(cDCLs), cDCLs);
+            return new AntInstance(classPathToString(mainClassPath), main, bridgeLoader, impl.getDeclaredConstructor().newInstance(), createCustomDefs(cDCLs), cDCLs);
         } catch (Exception e) {
             return fallback(e);
         } catch (LinkageError e) {
